# tailwindcss-yew-template

./: .gitignore  Cargo.toml  README.md  index.html  package.json
src/: data.rs  main.rs
